sysprof-cli: Don't overwrite capture file by default

Add -f / --force to allow overwrite

https://bugzilla.gnome.org/show_bug.cgi?id=775062